styles/pages/_home-page.scss
.landing-container {
  @apply container mx-auto lg:h-screen;
}

.landing {
  @apply relative h-full w-full justify-center lg:flex lg:items-center;

  &-content {
    @apply md:w-8/12 lg:pl-12 xl:w-1/2 xl:pl-28;

    & .landing-title-wrapper {
      @apply overflow-y-auto py-5 pb-5 pr-10 lg:mb-5 2xl:pr-20;
    }

    & .landing-title,
    .landing-letter {
      @apply relative inline-block text-4xl font-semibold lg:text-5xl 2xl:text-6xl;
    }
    & p {
      @apply text-base lg:text-xl;
      line-height: 150%;
    }
  }
  &-logo {
    @apply absolute left-[43%] top-[25%] -z-30 w-4/12  items-center justify-center  md:top-[-100%] lg:static lg:z-0 lg:flex lg:w-1/2;

    & img {
      @apply aspect-square w-3/12;
    }
  }
  &-text {
    @apply mt-10 tracking-[5px];
  }
}

// testimonials section
.testimonials_ {
  @apply container mx-auto mb-20 px-5  pt-14 lg:mb-40 2xl:pt-20;
  & h3 {
    @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
  }

  &_content__item {
    @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-28 2xl:pt-16;

    &_image {
      @apply relative hidden w-3/12 overflow-hidden object-cover lg:block;

      & img {
        @apply w-full;
      }
    }
    &_content {
      @apply relative flex flex-col-reverse overflow-hidden pt-2 lg:w-9/12  lg:flex-col xl:pt-5 2xl:pt-10;

      &_user {
        @apply mt-8 flex w-full items-center truncate lg:mt-0 lg:block;
      }

      & .person {
        @apply text-2xl font-semibold md:text-3xl 2xl:text-5xl;
      }
      & .role {
        @apply mt-1 truncate text-lg md:text-xl lg:mt-2 2xl:mt-3 2xl:text-2xl;
      }
      & .text {
        @apply pt-8 text-2xl text-slate-800 2xl:text-3xl;
      }
    }
  }
}

// collaborate section

.collaborate_ {
  @apply bg-[url(/_next/static/media/collaborate-img.5818b821.png)] bg-cover bg-no-repeat lg:mx-auto lg:bg-none;
  & h3 {
    @apply text-3xl font-semibold text-black md:text-4xl  lg:text-5xl 2xl:text-6xl;
  }
  &_bgwrapper {
    @apply bg-slate-900 bg-opacity-80 px-5 pt-14 pb-40 lg:bg-inherit 2xl:pt-20;
  }
  &_content {
    @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-20 2xl:pt-16;
    &_text {
      @apply w-full lg:w-2/3;

      & p {
        @apply pt-8 text-lg text-gray-300 lg:text-3xl lg:text-slate-800;
      }
      & .talk-btn {
        @apply mt-8 rounded-full border-2 border-purple-700 bg-purple-700 px-7 py-2 text-lg text-white lg:bg-transparent lg:text-2xl lg:text-purple-700;
      }
    }
    &_image {
      @apply relative hidden w-1/3 overflow-hidden object-cover lg:block;

      & img {
        @apply w-full;
      }
    }
  }
}

.shape {
  @apply absolute top-0 left-0 hidden  h-auto w-full md:top-20 lg:top-0 lg:block;
}

// service card section

.servicecard_ {
  @apply container mx-auto;
  & h3 {
    @apply text-3xl font-semibold md:text-5xl 2xl:text-6xl;
  }
  &_bgwrapper {
    @apply px-5 pt-14 pb-24 2xl:pt-20;
  }
  &_content {
    @apply flex w-full justify-center pt-4 lg:gap-x-10 lg:pt-8 xl:gap-x-16 2xl:pt-10;
    &_text {
      @apply w-full;

      & p {
        @apply text-lg text-slate-800 lg:text-2xl;
      }
      & .learn-btn {
        @apply mt-6 rounded-full border-2 px-7 py-2 text-lg lg:text-2xl;
      }
    }
    &_bigtxt {
      @apply flex flex-row justify-center  pt-14 text-9xl text-[25vw] opacity-50 md:text-[35vh] lg:text-[40vh] xl:text-[48vh] 2xl:text-[55vh];
      -webkit-text-fill-color: transparent;
      -webkit-text-stroke-width: 3px;
      font-family: 'Poppins';
    }
  }
}

// our team section

.ourteam_ {
  @apply container mx-auto;
  & h3 {
    @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
  }
  &_bgwrapper {
    @apply relative px-5 pt-16 pb-40 md:pb-60 lg:pb-80 xl:pb-96 2xl:pt-20;
  }
  &_content {
    @apply flex w-full flex-row justify-center gap-10 space-x-4 overflow-x-visible pt-12  lg:pt-16;
    &_card {
      @apply relative h-[400px] w-72 flex-shrink-0 rounded-tl-[2rem] rounded-tr-[2rem] rounded-br-[2rem] bg-cover bg-no-repeat;
      &_text {
        @apply absolute bottom-0 top-auto flex w-72 flex-col items-start justify-start rounded-br-[2rem] bg-opacity-95 bg-gradient-to-t from-black to-transparent pl-3 pb-3 pt-32;
        & .name {
          @apply text-base  text-white lg:text-xl;
        }
        & .title {
          @apply text-xs text-white lg:text-sm;
        }
      }
    }
  }
  &_bigtxt {
    @apply absolute top-[500px] bottom-auto -z-10 flex w-full justify-center md:top-[400px];
    & div {
      @apply flex flex-row justify-center whitespace-nowrap text-9xl text-[25vw] opacity-50 md:text-[35vh] lg:text-[40vh] xl:text-[48vh] 2xl:text-[55vh];
      -webkit-text-fill-color: transparent;
      -webkit-text-stroke-width: 3px;
      -webkit-text-stroke-color: black;
    }
  }
}

.partners {
  &_container {
    @apply container mx-auto mt-20  px-5 2xl:mt-52;

    & h3 {
      @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
    }
  }

  &_card {
    &_container {
      @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-10 xl:mt-32;
    }
    &_image {
      @apply relative h-auto w-full overflow-hidden object-cover opacity-100  lg:p-5;
    }
  }
}

